--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-elements": "^3.4.3",
     "react-native-reanimated": "3.3.0",
     "typescript": "^5.1.3"
   },
