--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react-native": "0.72.4",
     "react-native-elements": "^3.4.3",
     "react-native-reanimated": "3.3.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
